# powerline-date

./: README.mkd  powerline_date.py  pyproject.toml  setup.py  test_powerline_date.py
.github/workflows/: ci.yml  release.yml
