[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "powerline-date"
dynamic = ["version"]
description = "Powerline date segment with timezone and 30s rotation support"
readme = {file = "README.mkd", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "python-dateutil",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/cwood/powerline-date"
Repository = "https://github.com/cwood/powerline-date"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["powerline_date.py"]
